<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseActivity">

    <TextView
        android:id="@+id/textView10"
        style="@style/browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/text_brows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <Button-->
<!--        android:id="@+id/button5"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:background="@drawable/button_green"-->
<!--        android:onClick="go"-->
<!--        android:text="@string/go"-->
<!--        android:textColor="@color/colorWhite"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <LinearLayout
        android:id="@+id/plastuk"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:background="@drawable/linearlayout_border"
        android:elevation="10dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/paper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.52">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/frameplastuk" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/plastuk"
            android:textColor="@color/colorPodDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bio"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/linearlayout_border"
        android:elevation="10dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.523">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="150dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/framebio" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/bio"
            android:textColor="@color/colorPodDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/paper"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/linearlayout_border"
        android:elevation="10dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/framepaper" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/paper"
            android:textColor="@color/colorPodDark" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>